# w26

./: .gitignore  .gitmodules  README.md  SUMMARY.md  book.toml  requirements.txt
.github/: process_slides.sh
.github/workflows/: build_and_deploy.yml
assignments/journal_club/: README.md
crates/mdbook-marp/: Cargo.toml
crates/mdbook-marp/src/: main.rs
lectures/: marp-theme.css
lectures/01-data/: 01-intro.md  01_data_exploration.ipynb  silly_example.ipynb
lectures/02-math-review/: 02-math-review.md
lectures/04-backpropagation/: 04-backprop.md  04-backprop_examples.ipynb
lectures/slides/: 01-intro.html  02-math-review.html  03-training-models.html
tutorials/01-data-exploration/: README.md  exploratory_visualization.ipynb
tutorials/04-mlp/: README.md
