[package]
name = "mdbook-marp"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
mdbook-preprocessor.workspace = true
pulldown-cmark = { workspace = true, default-features = false }
pulldown-cmark-to-cmark = "21.0.0"
serde_json.workspace = true

[[bin]]
name = "mdbook-marp"

